--- a/src/content/graphos/delivery/propose-changes.mdx
+++ b/src/content/graphos/delivery/propose-changes.mdx
@@ -64,7 +64,7 @@ From either location:
 
 5. Click **Create Proposal**.
 
-Once you've created the proposal, you land on the newly created proposal's **Editor** tab. This tab is where you [make the schema changes](#edit-subgraph-schemas) you want to propose.
+Once you've created the proposal, you land on the newly created proposal's **Editor** tab. This tab is where you make the schema changes you want to propose.
 
 ## Edit subgraph schemas
 
@@ -186,7 +186,7 @@ You can manually change the proposal's status from the overview page by clicking
   alt="Schema proposals overview tab in Studio"
 />
 
-**Approved** and **Implemented** statuses are automatically set once [necessary conditions](./schema-proposals#proposal-workflow) have been met.
+**Approved** and **Implemented** statuses are automatically set once [necessary conditions](./schema-proposals#proposal-statuses) have been met.
 
 ## Request review
 
