--- a/src/content/graphos/delivery/review-proposals.mdx
+++ b/src/content/graphos/delivery/review-proposals.mdx
@@ -66,7 +66,7 @@ Click on the **•••** button next to a comment to edit or delete it.
   alt="Schema proposals changes tab in Studio"
 />
 
-Share comment by clicking the link button to copy its URL.
+Share a comment by clicking the link button to copy its URL.
 
 <img
   src="../img/schema-proposals/share-comment.jpg"
