--- a/src/content/graphos/delivery/implement-proposals.mdx
+++ b/src/content/graphos/delivery/implement-proposals.mdx
@@ -81,7 +81,7 @@ When a schema published to a [proposal's source variant](./propose-changes/#star
   alt="Schema proposals overview in Studio"
 />
 
-When an **Approved** or **Open for feedback** proposal's changes have been fully implemented—[whether from one launch or many](#matching-changes-to-proposals)—the proposal's status changes to **Implemented**.
+When an **Approved** or **Open for feedback** proposal's changes have been fully implemented—[whether from one launch or many](#matching-changes-to-proposals)—the proposal's stage changes to **Implemented**.
 
 <img
   src="../img/schema-proposals/fully-implemented-proposal.jpg"
@@ -91,7 +91,7 @@ When an **Approved** or **Open for feedback** proposal's changes have been fully
 
 <Note>
 
-- A proposal with **Draft** status can't become **Implemented**, even when all its changes are published. Once such a proposal's status is changed to **Open for feedback**, it automatically switches to **Implemented**.
-- **Implemented** proposals cannot receive further revisions, nor their status changed.
+- A proposal with **Draft** stage can't become **Implemented**, even when all its changes are published. Once such a proposal's stage is changed to **Open for feedback**, it automatically switches to **Implemented**.
+- **Implemented** proposals cannot receive further revisions, nor their stage changed.
 
 </Note>
