--- a/src/content/graphos/delivery/review-proposals.mdx
+++ b/src/content/graphos/delivery/review-proposals.mdx
@@ -19,7 +19,7 @@ Proposal creators and reviewers can review different aspects of a proposal from 
 - A proposal's **Overview** tab is where team members with [the appropriate permissions](./configure-proposals#configure-permissions-and-approvals) can:
   - View and edit a proposal's description by clicking the pencil icon on the **README**.
   - Use the **Proposal activity** log to monitor changes over time and leave overall commentary.
-  - View the proposal's status and author.
+  - View the proposal's stage and author.
   - Select reviewers.
 - The [**Changes**](#changes) tab shows both a summary and detailed view of the schema changes that make up a proposal.
   - All viewers can also [provide commentary](#add-comments) on changes from the **Changes** tab.
